--- a/src/content/docs/writeups/PyLoader.mdx
+++ b/src/content/docs/writeups/PyLoader.mdx
@@ -1,6 +1,6 @@
 ---
 layout: /src/layouts/PostLayout.astro
-title: Lavita
+title: PyLoader
 tags: []
 ---
 **Start 13:47 31-01-2025**
@@ -10,9 +10,9 @@ tags: []
 Scope:
 192.168.140.26
 ```
-# Recon
+## Recon
 
-## Nmap
+### Nmap
 
 ```bash
 sudo nmap -sC -sV -vvvv -Pn -p- 192.168.140.26 -sT --min-rate=5000 -T5
@@ -44,7 +44,7 @@ However this is unnecessary as we can easily get a reverse shell using this PoC:
 ![](../../../assets/8b71577e820243d02b32b9047d4e1af9.png)
 
 
-# Foothold
+## Foothold
 
 ![](../../../assets/6a3c7eec95bd3c12d693579cdcaa14bd.png)
 
