--- a/src/content/docs/writeups/Ochima.mdx
+++ b/src/content/docs/writeups/Ochima.mdx
@@ -1,6 +1,6 @@
 ---
 layout: /src/layouts/PostLayout.astro
-title: Lavita
+title: Ochima
 tags: []
 ---
 **Start 10:51 08-02-2025**
@@ -10,9 +10,9 @@ tags: []
 Scope:
 192.168.212.32
 ```
-# Recon
+## Recon
 
-## Nmap
+### Nmap
 
 ```bash
 sudo nmap -sC -sV -vvvv -Pn -p- 192.168.212.32 -sT --min-rate=5000 -T5      
@@ -49,14 +49,14 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel
 ![](../../../assets/ce5852aa5d31366c1f8559670f6a8ef9.png)
 
 
-# Foothold
+## Foothold
 
 ![](../../../assets/34329effa1290616ca79c8cc7ed2bfd1.png)
 
 ![](../../../assets/e03691a0fae240e1caf3d6fea6dcf26c.png)
 
 
-## local.txt
+### local.txt
 
 ![](../../../assets/162ee46a46fc56c4a6f186d18e9bc4cc.png)
 
@@ -76,7 +76,7 @@ Furthermore I found this
 ![](../../../assets/d7d687887b3bb47040ac4774275b4915.png)
 
 
-# Privilege Escalation
+## Privilege Escalation
 
 Since it is owned by `root` we can go ahead and modify the file to add a reverse shell to it.
 
@@ -87,7 +87,7 @@ Since it is owned by `root` we can go ahead and modify the file to add a reverse
 easy as that.
 
 
-## proof.txt
+### proof.txt
 
 ![](../../../assets/cc27a7de92be5aebcc1a68cba2e697e2.png)
 
